fix z-indexing

--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ footer {
 	bottom: 0;
 	padding-top: 90px;
 	margin: 0;
-	z-index: -1;
+	z-index: 0;
 }
 
 .table {
@@ -78,6 +78,7 @@ vertical-align: top;
 position: relative;
 display: table;
 width: 100%;
+z-index:10;
 }
 
 
@@ -86,6 +87,7 @@ width: 100%;
 	  margin: 0px;
 	position: absolute:
 	top: 0;
+	z-index: 10;
 }
 .footer.row { height: 50px; bottom: 0; }
 	
